syntax = "proto3";

package com.huawei.fit.hakuna.kernel.registry.server;

option optimize_for = LITE_RUNTIME;
option java_package = "com.huawei.fit.hakuna.kernel.registry.server.proto";
option java_outer_classname = "SyncSubscriptionFitServiceProto";

import "com/huawei/fit/registry/registryCommon.proto";


message SyncSubscriptionService {
  com.huawei.fit.registry.Fitable fitable = 1;
  com.huawei.fit.registry.Address listenerAddress = 2;
  int32 operateType = 3;
  string callbackFitId = 4;
}